toysolver.cabal: use common stanza

--- a/toysolver.cabal
+++ b/toysolver.cabal
@@ -1,4 +1,4 @@
-cabal-version: 2.4
+cabal-version: 3.0
 Name:		toysolver
 Version:	0.9.0
 License:	BSD-3-Clause
@@ -120,7 +120,21 @@ source-repository head
   type:     git
   location: git://github.com/msakai/toysolver.git
 
+Common common-options
+  Default-Language: Haskell2010
+  GHC-Options: -rtsopts
+  -- GHC-Prof-Options: -auto-all
+
+Common exe-options
+  Import: common-options
+  if flag(ForceChar8)
+    CPP-OPtions: "-DFORCE_CHAR8"
+  if flag(LinuxStatic)
+    GHC-Options: -static -optl-static -optl-pthread
+  Other-Extensions: CPP
+
 Library
+  Import: common-options
   Exposed: True
   Hs-source-dirs: src
   Build-Depends:
@@ -189,7 +203,6 @@ Library
      CPP-Options: "-DEXTRA_BOUNDS_CHECKING"
   if impl(ghc)
      Build-Depends: ghc-prim
-  Default-Language: Haskell2010
   Other-Extensions:
      BangPatterns
      CPP
@@ -377,9 +390,9 @@ Library
      Paths_toysolver
   autogen-modules:
      Paths_toysolver
-  -- GHC-Prof-Options: -auto-all
 
 Executable toysolver
+  Import: exe-options
   Main-is: toysolver.hs
   HS-Source-Dirs: app
   Build-Depends:
@@ -395,16 +408,10 @@ Executable toysolver
     pseudo-boolean,
     scientific,
     toysolver
-  Default-Language: Haskell2010
-  Other-Extensions: CPP
-  GHC-Options: -rtsopts -threaded
-  if flag(ForceChar8)
-    CPP-OPtions: "-DFORCE_CHAR8"
-  if flag(LinuxStatic)
-    GHC-Options: -static -optl-static -optl-pthread
-  -- GHC-Prof-Options: -auto-all
+  GHC-Options: -threaded
 
 Executable toysat
+  Import: exe-options
   Main-is: toysat.hs
   HS-Source-Dirs: app/toysat
   Build-Depends:
@@ -426,16 +433,10 @@ Executable toysat
     toysolver,
     unbounded-delays,
     vector
-  Default-Language: Haskell2010
-  Other-Extensions: ScopedTypeVariables, CPP
-  GHC-Options: -rtsopts -threaded
-  -- GHC-Prof-Options: -auto-all
-  if flag(ForceChar8)
-    CPP-OPtions: "-DFORCE_CHAR8"
+  Other-Extensions: ScopedTypeVariables
+  GHC-Options: -threaded
   if flag(WithZlib)
     CPP-Options: "-DWITH_ZLIB"
-  if flag(LinuxStatic)
-    GHC-Options: -static -optl-static -optl-pthread
 
 Foreign-Library     toysat-ipasir
   type:             native-shared
@@ -460,6 +461,7 @@ Foreign-Library     toysat-ipasir
   default-language: Haskell2010
 
 Executable toysmt
+  Import: exe-options
   HS-Source-Dirs: app/toysmt, Smtlib
   Main-is: toysmt.hs
   Other-Modules:
@@ -487,16 +489,10 @@ Executable toysmt
   if flag(UseHaskeline)
     Build-Depends: haskeline >=0.7 && <0.9
     CPP-Options: "-DUSE_HASKELINE_PACKAGE"
-  Default-Language: Haskell2010
-  Other-Extensions: ScopedTypeVariables, CPP
-  GHC-Options: -rtsopts
-  -- GHC-Prof-Options: -auto-all
-  if flag(ForceChar8)
-    CPP-OPtions: "-DFORCE_CHAR8"
-  if flag(LinuxStatic)
-    GHC-Options: -static -optl-static -optl-pthread
+  Other-Extensions: ScopedTypeVariables
 
 Executable toyqbf
+  Import: exe-options
   Main-is: toyqbf.hs
   HS-Source-Dirs: app
   Build-Depends:
@@ -505,16 +501,10 @@ Executable toyqbf
     data-default-class,
     optparse-applicative,
     toysolver
-  Default-Language: Haskell2010
-  Other-Extensions: ScopedTypeVariables, CPP
-  GHC-Options: -rtsopts
-  -- GHC-Prof-Options: -auto-all
-  if flag(ForceChar8)
-    CPP-OPtions: "-DFORCE_CHAR8"
-  if flag(LinuxStatic)
-    GHC-Options: -static -optl-static -optl-pthread
+  Other-Extensions: ScopedTypeVariables
 
 Executable toyfmf
+  Import: exe-options
   If !flag(BuildToyFMF)
     Buildable: False
   Main-is: toyfmf.hs
@@ -528,18 +518,11 @@ Executable toyfmf
       optparse-applicative,
       text,
       toysolver
-  Default-Language: Haskell2010
-  Other-Extensions: CPP
-  GHC-Options: -rtsopts
-  if flag(ForceChar8)
-    CPP-OPtions: "-DFORCE_CHAR8"
-  if flag(LinuxStatic)
-    GHC-Options: -static -optl-static -optl-pthread
-  -- GHC-Prof-Options: -auto-all
 
 -- Converters
 
 Executable toyconvert
+  Import: exe-options
   Main-is: toyconvert.hs
   HS-Source-Dirs: app
   Build-Depends:
@@ -563,20 +546,14 @@ Executable toyconvert
     Build-Depends:
       optparse-applicative <0.18,
       ansi-wl-pprint
-  Default-Language: Haskell2010
-  Other-Extensions: CPP
   GHC-Options: -rtsopts
-  -- GHC-Prof-Options: -auto-all
-  if flag(ForceChar8)
-    CPP-OPtions: "-DFORCE_CHAR8"
   if flag(WithZlib)
     CPP-Options: "-DWITH_ZLIB"
-  if flag(LinuxStatic)
-    GHC-Options: -static -optl-static -optl-pthread
 
 -- Sample Programs
 
 Executable sudoku
+  Import: exe-options
   If !flag(BuildSamplePrograms)
     Buildable: False
   Main-is: sudoku.hs
@@ -585,15 +562,9 @@ Executable sudoku
     array,
     base >=4.16 && <4.22,
     toysolver
-  Default-Language: Haskell2010
-  Other-Extensions: CPP
-  GHC-Options: -rtsopts
-  if flag(ForceChar8)
-    CPP-OPtions: "-DFORCE_CHAR8"
-  if flag(LinuxStatic)
-    GHC-Options: -static -optl-static -optl-pthread
 
 Executable nonogram
+  Import: exe-options
   If !flag(BuildSamplePrograms)
     Buildable: False
   Main-is: nonogram.hs
@@ -603,16 +574,9 @@ Executable nonogram
     base >=4.16 && <4.22,
     containers,
     toysolver
-  Default-Language: Haskell2010
-  Other-Extensions: CPP
-  GHC-Options: -rtsopts
-  -- GHC-Prof-Options: -auto-all
-  if flag(ForceChar8)
-    CPP-OPtions: "-DFORCE_CHAR8"
-  if flag(LinuxStatic)
-    GHC-Options: -static -optl-static -optl-pthread
 
 Executable nqueens
+  Import: exe-options
   If !flag(BuildSamplePrograms)
     Buildable: False
   Main-is: nqueens.hs
@@ -621,16 +585,9 @@ Executable nqueens
     array,
     base >=4.16 && <4.22,
     toysolver
-  Default-Language: Haskell2010
-  Other-Extensions: CPP
-  GHC-Options: -rtsopts
-  -- GHC-Prof-Options: -auto-all
-  if flag(ForceChar8)
-    CPP-OPtions: "-DFORCE_CHAR8"
-  if flag(LinuxStatic)
-    GHC-Options: -static -optl-static -optl-pthread
 
 Executable numberlink
+  Import: exe-options
   If !flag(BuildSamplePrograms)
     Buildable: False
   Main-is: numberlink.hs
@@ -644,16 +601,9 @@ Executable numberlink
     parsec,
     pseudo-boolean,
     toysolver
-  Default-Language: Haskell2010
-  Other-Extensions: CPP
-  GHC-Options: -rtsopts
-  -- GHC-Prof-Options: -auto-all
-  if flag(ForceChar8)
-    CPP-OPtions: "-DFORCE_CHAR8"
-  if flag(LinuxStatic)
-    GHC-Options: -static -optl-static -optl-pthread
 
 Executable knapsack
+  Import: exe-options
   If !flag(BuildSamplePrograms)
     Buildable: False
   Main-is: knapsack.hs
@@ -661,16 +611,9 @@ Executable knapsack
   Build-Depends:
     base >=4.16 && <4.22,
     toysolver
-  Default-Language: Haskell2010
-  Other-Extensions: CPP
-  GHC-Options: -rtsopts
-  -- GHC-Prof-Options: -auto-all
-  if flag(ForceChar8)
-    CPP-OPtions: "-DFORCE_CHAR8"
-  if flag(LinuxStatic)
-    GHC-Options: -static -optl-static -optl-pthread
 
 Executable assign
+  Import: exe-options
   If !flag(BuildSamplePrograms)
     Buildable: False
   Main-is: assign.hs
@@ -682,16 +625,9 @@ Executable assign
     containers,
     toysolver,
     vector
-  Default-Language: Haskell2010
-  Other-Extensions: CPP
-  GHC-Options: -rtsopts
-  -- GHC-Prof-Options: -auto-all
-  if flag(ForceChar8)
-    CPP-OPtions: "-DFORCE_CHAR8"
-  if flag(LinuxStatic)
-    GHC-Options: -static -optl-static -optl-pthread
 
 Executable shortest-path
+  Import: exe-options
   If !flag(BuildSamplePrograms)
     Buildable: False
   Main-is: shortest-path.hs
@@ -702,16 +638,9 @@ Executable shortest-path
     containers,
     unordered-containers,
     toysolver
-  Default-Language: Haskell2010
-  Other-Extensions: CPP
-  GHC-Options: -rtsopts
-  -- GHC-Prof-Options: -auto-all
-  if flag(ForceChar8)
-    CPP-OPtions: "-DFORCE_CHAR8"
-  if flag(LinuxStatic)
-    GHC-Options: -static -optl-static -optl-pthread
 
 Executable htc
+  Import: exe-options
   If !flag(BuildSamplePrograms)
     Buildable: False
   Main-is: htc.hs
@@ -720,16 +649,9 @@ Executable htc
     base >=4.16 && <4.22,
     containers,
     toysolver
-  Default-Language: Haskell2010
-  Other-Extensions: CPP
-  GHC-Options: -rtsopts
-  -- GHC-Prof-Options: -auto-all
-  if flag(ForceChar8)
-    CPP-OPtions: "-DFORCE_CHAR8"
-  if flag(LinuxStatic)
-    GHC-Options: -static -optl-static -optl-pthread
 
 Executable svm2lp
+  Import: exe-options
   If !flag(BuildSamplePrograms)
     Buildable: False
   Main-is: svm2lp.hs
@@ -743,16 +665,9 @@ Executable svm2lp
     split,
     text,
     toysolver
-  Default-Language: Haskell2010
-  Other-Extensions: CPP
-  GHC-Options: -rtsopts
-  -- GHC-Prof-Options: -auto-all
-  if flag(ForceChar8)
-    CPP-OPtions: "-DFORCE_CHAR8"
-  if flag(LinuxStatic)
-    GHC-Options: -static -optl-static -optl-pthread
 
 Executable survey-propagation
+  Import: exe-options
   if !flag(BuildSamplePrograms)
     Buildable: False    
   Main-is: survey-propagation.hs
@@ -761,16 +676,10 @@ Executable survey-propagation
     base >=4.16 && <4.22,
     data-default-class,
     toysolver
-  Default-Language: Haskell2010
-  Other-Extensions: CPP
   GHC-Options: -rtsopts
-  -- GHC-Prof-Options: -auto-all
-  if flag(ForceChar8)
-    CPP-Options: "-DFORCE_CHAR8"
-  if flag(LinuxStatic)
-    GHC-Options: -static -optl-static -optl-pthread
 
 Executable probsat
+  Import: exe-options
   if !flag(BuildSamplePrograms)
     Buildable: False    
   Main-is: probsat.hs
@@ -783,18 +692,11 @@ Executable probsat
     optparse-applicative,
     vector,
     toysolver
-  Default-Language: Haskell2010
-  Other-Extensions: CPP
-  GHC-Options: -rtsopts
-  -- GHC-Prof-Options: -auto-all
-  if flag(ForceChar8)
-    CPP-Options: "-DFORCE_CHAR8"
-  if flag(LinuxStatic)
-    GHC-Options: -static -optl-static -optl-pthread
 
 -- Misc Programs
 
 Executable pigeonhole
+  Import: exe-options
   If !flag(BuildMiscPrograms)
     Buildable: False
   Main-is: pigeonhole.hs
@@ -805,16 +707,9 @@ Executable pigeonhole
     containers,
     pseudo-boolean,
     toysolver
-  Default-Language: Haskell2010
-  Other-Extensions: CPP
-  GHC-Options: -rtsopts
-  -- GHC-Prof-Options: -auto-all
-  if flag(ForceChar8)
-    CPP-OPtions: "-DFORCE_CHAR8"
-  if flag(LinuxStatic)
-    GHC-Options: -static -optl-static -optl-pthread
 
 Executable maxsatverify
+  Import: exe-options
   If !flag(BuildMiscPrograms)
     Buildable: False
   Main-is: maxsatverify.hs
@@ -823,16 +718,9 @@ Executable maxsatverify
     array,
     base >=4.16 && <4.22,
     toysolver
-  Default-Language: Haskell2010
-  Other-Extensions: CPP
-  GHC-Options: -rtsopts
-  -- GHC-Prof-Options: -auto-all
-  if flag(ForceChar8)
-    CPP-OPtions: "-DFORCE_CHAR8"
-  if flag(LinuxStatic)
-    GHC-Options: -static -optl-static -optl-pthread
 
 Executable pbverify
+  Import: exe-options
   Main-is: pbverify.hs
   If !flag(BuildMiscPrograms)
     Buildable: False
@@ -842,18 +730,11 @@ Executable pbverify
     base >=4.16 && <4.22,
     pseudo-boolean,
     toysolver
-  Default-Language: Haskell2010
-  Other-Extensions: CPP
-  GHC-Options: -rtsopts
-  -- GHC-Prof-Options: -auto-all
-  if flag(ForceChar8)
-    CPP-OPtions: "-DFORCE_CHAR8"
-  if flag(LinuxStatic)
-    GHC-Options: -static -optl-static -optl-pthread
 
 -- Test suites and benchmarks
 
 Test-suite TestPolynomial
+  Import:            common-options
   Type:              exitcode-stdio-1.0
   HS-Source-Dirs:    test
   Main-is:           TestPolynomial.hs
@@ -868,12 +749,12 @@ Test-suite TestPolynomial
     tasty-quickcheck >=0.8 && <0.12,
     tasty-th,
     toysolver
-  Default-Language: Haskell2010
   Other-Extensions:
     DataKinds
     TemplateHaskell
 
 Test-suite TestSuite
+  Import:            common-options
   Type:              exitcode-stdio-1.0
   HS-Source-Dirs:    test Smtlib app/toysmt
   Main-is:           TestSuite.hs
@@ -953,7 +834,6 @@ Test-suite TestSuite
     unordered-containers,
     vector,
     vector-space
-  Default-Language: Haskell2010
   Other-Extensions:
     CPP
     DataKinds
@@ -964,6 +844,7 @@ Test-suite TestSuite
     TupleSections
 
 Benchmark BenchmarkSATLIB
+  Import:           common-options
   type:             exitcode-stdio-1.0
   hs-source-dirs:   benchmarks
   main-is:          BenchmarkSATLIB.hs
@@ -973,9 +854,9 @@ Benchmark BenchmarkSATLIB
     criterion >=1.0 && <1.7,
     data-default-class,
     toysolver
-  Default-Language: Haskell2010
 
 Benchmark BenchmarkKnapsack
+  Import:           common-options
   type:             exitcode-stdio-1.0
   hs-source-dirs:   benchmarks
   main-is:          BenchmarkKnapsack.hs
@@ -983,9 +864,9 @@ Benchmark BenchmarkKnapsack
     base >=4.16 && <4.22,
     criterion >=1.0 && <1.7,
     toysolver
-  Default-Language: Haskell2010
 
 Benchmark BenchmarkSubsetSum
+  Import:           common-options
   type:             exitcode-stdio-1.0
   hs-source-dirs:   benchmarks
   main-is:          BenchmarkSubsetSum.hs
@@ -994,4 +875,3 @@ Benchmark BenchmarkSubsetSum
     criterion >=1.0 && <1.7,
     toysolver,
     vector
-  Default-Language: Haskell2010
