--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@
 # Use new container infrastructure to enable caching
 sudo: false
 
-dist: xenial
+dist: bionic
 
 # Do not choose a language; we provide our own build tools.
 language: generic
