--- a/stack-ghc-8.4.yaml
+++ b/stack-ghc-8.4.yaml
@@ -54,6 +54,7 @@ extra-deps:
 # - git: https://github.com/msakai/opencl.git
 #   commit: 80d0cb9d235819cd53e6a36d7a9258bc19d564ab
 - bytestring-encoding-0.1.0.0
+- MIP-0.1.1.0
 
 # hack for avoiding haddock error of MemoTrie-0.6.4
 #- MemoTrie-0.6.7
