Revert "toysolver.cabal: use BSD-3-Clause instead of BSD3"
This reverts commit db3506740d4a4610fcab2213508bd40dd2e49af4.

--- a/toysolver.cabal
+++ b/toysolver.cabal
@@ -1,6 +1,6 @@
 Name:		toysolver
 Version:	0.7.0
-License:	BSD-3-Clause
+License:	BSD3
 License-File:	COPYING
 Author:		Masahiro Sakai (masahiro.sakai@gmail.com)
 Maintainer:	masahiro.sakai@gmail.com
