constrain log-domain <0.13

--- a/toysolver.cabal
+++ b/toysolver.cabal
@@ -184,7 +184,7 @@ Library
      hashtables,
      heaps,
      intern >=0.9.1.2 && <1.0.0.0,
-     log-domain,
+     log-domain <0.13,
      -- numLoopState requires loop >=0.3.0
      loop >=0.3.0 && < 1.0.0,
      mtl >=2.1.2,
