--- a/.travis.yml
+++ b/.travis.yml
@@ -27,7 +27,7 @@ matrix:
   include:
     - env: STACK_YAML=stack-ghc-8.10.yaml
       compiler: ": #GHC 8.10.2"
-    - env: STACK_YAML=stack-ghc-8.8.yaml RELEASE=1 HADDOCK=1 COVERAGE=1 SHC_GHCVER=8.0.1
+    - env: STACK_YAML=stack-ghc-8.8.yaml RELEASE=1 HADDOCK=1 SHC_GHCVER=8.0.1
       compiler: ": #GHC 8.8.4"
     - env: STACK_YAML=stack-ghc-8.8.yaml RELEASE=1
       compiler: ": #GHC 8.8.4"
