--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -16,13 +16,13 @@ jobs:
             stack_test_args: ''
             flags: '--flag toysolver:BuildToyFMF --flag toysolver:BuildSamplePrograms --flag toysolver:BuildMiscPrograms --flag toysolver:OpenCL'
             coveralls: true
-          - ghc: '8.8.4'
-            os: macos-latest
-            stack_yaml: 'stack-ghc-8.8.yaml'
-            stack_args: ''
-            stack_test_args: ''
-            flags: '--flag toysolver:BuildToyFMF --flag toysolver:BuildSamplePrograms --flag toysolver:BuildMiscPrograms'
-            coveralls: false
+          #- ghc: '8.8.4'
+          #  os: macos-latest
+          #  stack_yaml: 'stack-ghc-8.8.yaml'
+          #  stack_args: ''
+          #  stack_test_args: ''
+          #  flags: '--flag toysolver:BuildToyFMF --flag toysolver:BuildSamplePrograms --flag toysolver:BuildMiscPrograms'
+          #  coveralls: false
           - ghc: '8.8.4'
             os: windows-latest
             stack_yaml: 'stack-ghc-8.8.yaml'
