--- a/toysolver.cabal
+++ b/toysolver.cabal
@@ -205,6 +205,7 @@ Library
      GADTs
      GeneralizedNewtypeDeriving
      InstanceSigs
+     KindSignatures
      MultiParamTypeClasses
      OverloadedStrings
      Rank2Types
