--- a/appveyor.yml
+++ b/appveyor.yml
@@ -25,7 +25,7 @@ for:
     STACK_YAML: "stack.yaml"
 
 install:
-- if %PLATFORM%==x86 (curl -ostack.zip -L --insecure https://github.com/commercialhaskell/stack/releases/download/v2.1.3/stack-2.1.3-windows-i386.zip) else (curl -ostack.zip -L --insecure http://www.stackage.org/stack/windows-x86_64)
+- curl -ostack.zip -L --insecure http://www.stackage.org/stack/windows-x86_64
 - 7z x stack.zip stack.exe
 - stack setup > nul
 
