GitHub Actions: specify 'arch' through STACK_YAML file instead of --arch argument
In this way, the information is propagated to 'stack path
--local-install-root' invocation inside the build_artifacts.hs.

--- a/stack-windows-i386.yaml
+++ b/stack-windows-i386.yaml
@@ -76,11 +76,12 @@ extra-package-dbs: []
 # Require a specific version of stack, using version ranges
 # require-stack-version: -any # Default
 # require-stack-version: ">=1.1"
-# 
+
 # Override the architecture used by stack, especially useful on Windows
 # arch: i386
 # arch: x86_64
-# 
+arch: i386
+
 # Extra directories used by stack for building
 # extra-include-dirs: [/path/to/dir]
 # extra-lib-dirs: [/path/to/dir]
