--- a/.travis.yml
+++ b/.travis.yml
@@ -71,6 +71,11 @@ script:
 
 after_script:
 - |
+  if [ "$TRAVIS_OS_NAME" = "osx" ]; then
+    otool -L `stack path --local-install-root`/lib/libtoysat-ipasir.dylib
+  else
+    ldd `stack path --local-install-root`/lib/libtoysat-ipasir.so
+  fi
   if [ -n "$COVERAGE" ]; then
     travis_retry curl -L https://github.com/rubik/stack-hpc-coveralls/releases/download/v0.0.4.0/shc-linux-x64-$SHC_GHCVER.tar.bz2 | tar -xj
     ./shc toysolver TestSuite TestPolynomial
