--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -7,6 +7,7 @@ jobs:
     env:
       STACK_YAML: ${{ matrix.stack_yaml }}
     strategy:
+      fail-fast: false
       matrix:
         include:
           - ghc: '8.8.4'
