--- a/toysolver.cabal
+++ b/toysolver.cabal
@@ -5,7 +5,7 @@ License-File:	COPYING
 Author:		Masahiro Sakai (masahiro.sakai@gmail.com)
 Maintainer:	masahiro.sakai@gmail.com
 Category:	Algorithms, Optimisation, Optimization, Theorem Provers, Constraints, Logic, Formal Methods, SMT
-Cabal-Version:	1.18
+Cabal-Version:	2.0
 Synopsis:	Assorted decision procedures for SAT, SMT, Max-SAT, PB, MIP, etc
 Description:	Toy-level solver implementation of various problems including SAT, SMT, Max-SAT, PBS/PBO (Pseudo Boolean Satisfaction/Optimization), MILP (Mixed Integer Linear Programming) and non-linear real arithmetic.
 Homepage:	https://github.com/msakai/toysolver/
@@ -380,6 +380,8 @@ Library
      ToySolver.SAT.MUS.Enum.Base
      ToySolver.SAT.MUS.Enum.CAMUS
      ToySolver.Version.TH
+     Paths_toysolver
+  autogen-modules:
      Paths_toysolver
   -- GHC-Prof-Options: -auto-all
 
