--- a/toysolver.cabal
+++ b/toysolver.cabal
@@ -383,6 +383,7 @@ Library
      Paths_toysolver
   autogen-modules:
      Paths_toysolver
+  ghc-options: -g
   -- GHC-Prof-Options: -auto-all
 
 Executable toysolver
@@ -457,6 +458,7 @@ Foreign-Library     toysat-ipasir
   hs-source-dirs:   app/toysat-ipasir
   include-dirs:     app/toysat-ipasir
   c-sources:        app/toysat-ipasir/cbits.c
+  ghc-options:      -g
   cpp-options:      -DIPASIR_SHARED_LIB -DBUILDING_IPASIR_SHARED_LIB
   includes:         ipasir.h
   other-modules:    IPASIR
